# BismiAllah-PoppingDikr

./: .gitignore  BismiAllah.cpp  Dikr.cpp  README.md  Settings.cpp  imgui.ini  main.cpp  meson.build  popping_Dikr.cpp
Dikr_exe/: main.cpp  main1.cpp
files/: Settings  Settings_Order  about.md
settings_exe/: main.cpp
