# بسم الله الرحمن الرحيم
project('Dikr', 'cpp',
        default_options: 'default_library=static')


sdl_dep = [
    dependency('sdl2'),
    dependency('sdl2_ttf')
]

executable('PoppingDikr',
            'Dikr.cpp',
            dependencies: sdl_dep)

Settings_files = [
    'settings_exe/main.cpp'
]

